apps/forgejo/app/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: forgejo
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  ingress:
  - from:
    # Allow ssh and http ingress
    - ipBlock:
        cidr: "0.0.0.0/0"
    ports:
    - protocol: TCP
      port: 3000
      endPort: 3000
    - protocol: TCP
      port: 2222
      endPort: 2222
  policyTypes:
    - Ingress
